name:                nbundle-parser
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/lesguillemets/nbundle-parser
license:             MIT
license-file:        LICENSE
author:              lesguillemets
maintainer:          kgkacko+github@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable bundle-parser
  main-is:             Main.hs
  other-modules:       Vim
                     , Vim.NeoBundle
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , parsec
                     , filepath
                     , directory
  hs-source-dirs:      src
  default-language:    Haskell2010
