name:                nbundle-parser
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/lesguillemets/nbundle-parser
license:             MIT
license-file:        LICENSE
author:              lesguillemets
maintainer:          kgkacko+github@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Vim.VimLine
                     , Vim.NeoBundle
                     , Vim.VimValue
                     , Vim.Parser
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , parsec
                     , containers
  other-extensions:    OverloadedStrings
  default-language:    Haskell2010

executable bundle-parser
  hs-source-dirs:      app
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8 && <5
                     , nbundle-parser
                     , parsec
                     , filepath
                     , directory
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
